// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`init > base + web 1`] = `
{
  "./test/path/.editorconfig": "# editorconfig.org
root = true

[*]
indent_style = space
indent_size = 2
",
  "./test/path/.gitignore": "# dependencies
node_modules
.pnp
.pnp.js
package-lock.json
yarn.lock

# tsup
dist/

# misc
.DS_Store
*.pem

# debug
npm-debug.log*
yarn-debug.log*
yarn-error.log*
.pnpm-debug.log*

# local env files
.env
.env*.local

# turbo
.turbo

# vercel cli
.vercel

# next.js
.next/
out/
build
next-env.d.ts
",
  "./test/path/.npmrc": "auto-install-peers=true
legacy-peer-deps=true
node-linker=hoisted
",
  "./test/path/.prettierignore": "pnpm-lock.yaml
public
",
  "./test/path/apps/web/next.config.mjs": "import bundleAnalyzer from '@next/bundle-analyzer';
import { withSentryConfig } from '@sentry/nextjs';

const shouldAnalyze = process.env.ANALYZE === 'true';

/** @type {(config?: import('next').NextConfig) => import('next').NextConfig} */
const withBundleAnalyzer = bundleAnalyzer({
  enabled: shouldAnalyze,
});

/** @type {import('next').NextConfig} */
const config = {
  reactStrictMode: true,

  /** We run eslint as a separate task in CI */
  eslint: { ignoreDuringBuilds: true },
};

export default withSentryConfig(
  shouldAnalyze ? withBundleAnalyzer(config) : config,
  {},
  { hideSourceMaps: true },
);
",
  "./test/path/apps/web/package.json": "{
  \\"name\\": \\"@mod/web\\",
  \\"version\\": \\"0.0.0\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"next build\\",
    \\"dev\\": \\"next dev\\",
    \\"lint\\": \\"eslint --ignore-path ../../.gitignore .\\",
    \\"start\\": \\"next start\\",
    \\"types\\": \\"tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@sentry/cli\\": \\"^2.17.4\\",
    \\"@sentry/nextjs\\": \\"^7.49.0\\",
    \\"next\\": \\"^13.3.1\\",
    \\"react\\": \\"^18.2.0\\",
    \\"react-dom\\": \\"^18.2.0\\"
  },
  \\"devDependencies\\": {
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@babel/core\\": \\"^7.21.4\\",
    \\"@next/bundle-analyzer\\": \\"^13.3.1\\",
    \\"@types/node\\": \\"^18.16.0\\",
    \\"@types/react\\": \\"^18.0.38\\",
    \\"@types/react-dom\\": \\"^18.0.11\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"typescript\\": \\"^5.0.4\\"
  }
}
",
  "./test/path/apps/web/sentry.client.config.ts": "import './sentry.config';
",
  "./test/path/apps/web/sentry.config.ts": "import * as Sentry from '@sentry/nextjs';

function initSentry() {
  const SENTRY_DSN = process.env.SENTRY_DSN ?? process.env.NEXT_PUBLIC_SENTRY_DSN;

  if (!SENTRY_DSN) {
    console.warn('No Sentry DSN found, check your environment variables');

    return;
  }

  Sentry.init({
    enabled: process.env.NODE_ENV !== 'development',
    dsn: SENTRY_DSN,
  });
}

initSentry();
",
  "./test/path/apps/web/sentry.edge.config.ts": "import './sentry.config';
",
  "./test/path/apps/web/sentry.server.config.ts": "import './sentry.config';
",
  "./test/path/apps/web/src/pages/_app.tsx": "import type { AppProps } from 'next/app';

function App({ Component, pageProps }: AppProps) {
  return <Component {...pageProps} />;
}

export default App;
",
  "./test/path/apps/web/src/pages/index.tsx": "export default function Home() {
  return (
    <div>
      <h1>Hello, world!</h1>
    </div>
  );
}
",
  "./test/path/apps/web/tsconfig.json": "{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\",
  \\"include\\": [\\"next-env.d.ts\\", \\"**/*.ts\\", \\"**/*.tsx\\", \\"next.config.mjs\\", \\".next/types/**/*.ts\\"],
  \\"compilerOptions\\": {
    \\"incremental\\": true,
    \\"baseUrl\\": \\"./src\\",
    \\"module\\": \\"esnext\\",
    \\"jsx\\": \\"preserve\\",
    \\"plugins\\": [
      {
        \\"name\\": \\"next\\"
      }
    ],
    \\"moduleResolution\\": \\"node\\"
  },
  \\"exclude\\": [\\"node_modules\\"]
}
",
  "./test/path/apps/web/turbo.json": "{
  \\"extends\\": [\\"//\\"],
  \\"pipeline\\": {
    \\"build\\": {
      \\"env\\": [\\"SENTRY_DSN\\", \\"NEXT_PUBLIC_SENTRY_DSN\\", \\"ANALYZE\\", \\"NODE_ENV\\", \\"VERCEL_URL\\"],
      \\"outputs\\": [\\".next/**\\", \\"!.next/cache/**\\"]
    }
  }
}
",
  "./test/path/package.json": "{
  \\"name\\": \\"test\\",
  \\"version\\": \\"0.0.0\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"turbo run build\\",
    \\"clean\\": \\"find . -name node_modules -o -name .turbo -o -name .next -o -name dist -type d -prune | xargs rm -rf\\",
    \\"dev\\": \\"turbo run dev\\",
    \\"format\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --check'\\",
    \\"format:fix\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --write'\\",
    \\"lint\\": \\"turbo lint && manypkg check\\",
    \\"lint:fix\\": \\"turbo lint -- --fix && manypkg fix\\",
    \\"plop\\": \\"plop\\",
    \\"types\\": \\"turbo types && tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@2digits/eslint-config\\": \\"^0.2.1\\",
    \\"@2digits/prettier-config\\": \\"^0.2.0\\",
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@manypkg/cli\\": \\"^0.20.0\\",
    \\"@types/node\\": \\"^18.16.0\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"plop\\": \\"^3.1.2\\",
    \\"prettier\\": \\"^2.8.8\\",
    \\"turbo\\": \\"^1.9.3\\",
    \\"typescript\\": \\"^5.0.4\\"
  },
  \\"packageManager\\": \\"pnpm@8.3.1\\",
  \\"engines\\": {
    \\"node\\": \\">=18.0.0\\"
  },
  \\"manypkg\\": {
    \\"ignoredRules\\": [
      \\"INTERNAL_MISMATCH\\"
    ]
  },
  \\"pnpm\\": {
    \\"neverBuiltDependencies\\": [
      \\"core-js\\",
      \\"core-js-compat\\",
      \\"core-js-pure\\",
      \\"cypress\\"
    ]
  },
  \\"prettier\\": \\"@2digits/prettier-config\\",
  \\"eslintConfig\\": {
    \\"extends\\": \\"@2digits\\"
  }
}
",
  "./test/path/pnpm-workspace.yaml": "packages:
  - 'apps/*'
  - 'packages/*'
",
  "./test/path/tsconfig.json": "{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\"
}
",
  "./test/path/turbo.json": "{
  \\"globalDependencies\\": [\\"**/.env\\", \\"tsconfig.json\\"],
  \\"pipeline\\": {
    \\"build\\": { \\"dependsOn\\": [\\"^build\\"], \\"outputs\\": [\\"dist/**\\", \\"build/**\\"] },
    \\"dev\\": { \\"cache\\": false, \\"persistent\\": true },
    \\"lint\\": { \\"cache\\": false },
    \\"lint-fix\\": { \\"cache\\": false },
    \\"types\\": { \\"dependsOn\\": [\\"^types\\"], \\"cache\\": false }
  }
}
",
}
`;

exports[`init > base 1`] = `
{
  "./test/path/.editorconfig": "# editorconfig.org
root = true

[*]
indent_style = space
indent_size = 2
",
  "./test/path/.gitignore": "# dependencies
node_modules
.pnp
.pnp.js
package-lock.json
yarn.lock

# tsup
dist/

# misc
.DS_Store
*.pem

# debug
npm-debug.log*
yarn-debug.log*
yarn-error.log*
.pnpm-debug.log*

# local env files
.env
.env*.local

# turbo
.turbo

# vercel cli
.vercel

# next.js
.next/
out/
build
next-env.d.ts
",
  "./test/path/.npmrc": "auto-install-peers=true
legacy-peer-deps=true
node-linker=hoisted
",
  "./test/path/.prettierignore": "pnpm-lock.yaml
public
",
  "./test/path/package.json": "{
  \\"name\\": \\"test\\",
  \\"version\\": \\"0.0.0\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"turbo run build\\",
    \\"clean\\": \\"find . -name node_modules -o -name .turbo -o -name .next -o -name dist -type d -prune | xargs rm -rf\\",
    \\"dev\\": \\"turbo run dev\\",
    \\"format\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --check'\\",
    \\"format:fix\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --write'\\",
    \\"lint\\": \\"turbo lint && manypkg check\\",
    \\"lint:fix\\": \\"turbo lint -- --fix && manypkg fix\\",
    \\"plop\\": \\"plop\\",
    \\"types\\": \\"turbo types && tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@2digits/eslint-config\\": \\"^0.2.1\\",
    \\"@2digits/prettier-config\\": \\"^0.2.0\\",
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@manypkg/cli\\": \\"^0.20.0\\",
    \\"@types/node\\": \\"^18.16.0\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"plop\\": \\"^3.1.2\\",
    \\"prettier\\": \\"^2.8.8\\",
    \\"turbo\\": \\"^1.9.3\\",
    \\"typescript\\": \\"^5.0.4\\"
  },
  \\"packageManager\\": \\"pnpm@8.3.1\\",
  \\"engines\\": {
    \\"node\\": \\">=18.0.0\\"
  },
  \\"manypkg\\": {
    \\"ignoredRules\\": [
      \\"INTERNAL_MISMATCH\\"
    ]
  },
  \\"pnpm\\": {
    \\"neverBuiltDependencies\\": [
      \\"core-js\\",
      \\"core-js-compat\\",
      \\"core-js-pure\\",
      \\"cypress\\"
    ]
  },
  \\"prettier\\": \\"@2digits/prettier-config\\",
  \\"eslintConfig\\": {
    \\"extends\\": \\"@2digits\\"
  }
}
",
  "./test/path/pnpm-workspace.yaml": "packages:
  - 'apps/*'
  - 'packages/*'
",
  "./test/path/tsconfig.json": "{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\"
}
",
  "./test/path/turbo.json": "{
  \\"globalDependencies\\": [\\"**/.env\\", \\"tsconfig.json\\"],
  \\"pipeline\\": {
    \\"build\\": { \\"dependsOn\\": [\\"^build\\"], \\"outputs\\": [\\"dist/**\\", \\"build/**\\"] },
    \\"dev\\": { \\"cache\\": false, \\"persistent\\": true },
    \\"lint\\": { \\"cache\\": false },
    \\"lint-fix\\": { \\"cache\\": false },
    \\"types\\": { \\"dependsOn\\": [\\"^types\\"], \\"cache\\": false }
  }
}
",
}
`;
